--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "author": "wotermelon <zwotermelon@gmail.com>",
   "description": "An electron window welt sliding plugin.",
-  "main": "./dist/index.js",
+  "main": "./dist/electron-window-welt-sliding.js",
   "scripts": {
-    "dev": "node ./build/dev-runner.js",
-    "lint": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter --fix src",
+    "dev": "electron --inspect=5858 ./src/main.dev.js",
+    "lint": "eslint --ext .js -f ./node_modules/eslint-friendly-formatter --fix src/welt-sliding",
     "build": "npm run pack",
     "pack": "cross-env NODE_ENV=production webpack --progress --colors --config ./build/webpack.main.plugin.config.js"
   },
@@ -23,8 +23,6 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
     "babili-webpack-plugin": "^0.1.2",
-    "cfonts": "^1.1.3",
-    "chalk": "^2.1.0",
     "cross-env": "^5.0.5",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
@@ -44,8 +42,6 @@
     "eslint-plugin-standard": "^3.0.1",
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
-    "webpack": "^3.5.2",
-    "webpack-dev-server": "^2.7.1",
-    "webpack-hot-middleware": "^2.18.2"
+    "webpack": "^3.5.2"
   }
 }
