--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "electron --inspect=5858 ./src/main.dev.js",
     "lint": "eslint --ext .js -f ./node_modules/eslint-friendly-formatter --fix src/welt-sliding",
     "build": "npm run pack",
-    "pack": "cross-env NODE_ENV=production webpack --progress --colors --config ./build/webpack.main.plugin.config.js"
+    "pack": "cross-env NODE_ENV=production webpack --progress --colors --config ./build/webpack.main.plugin.config.js",
+    "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
     "win-mouse": "^1.1.2"
@@ -30,7 +31,6 @@
     "electron-builder": "^19.19.1",
     "electron-debug": "^1.4.0",
     "electron-devtools-installer": "^2.2.0",
-    "electron-rebuild": "^1.7.3",
     "eslint": "^4.4.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
